--- a/Formula 1 EDA.ipynb
+++ b/Formula 1 EDA.ipynb
@@ -6396,7 +6396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6410,6 +6410,7 @@
     "JOIN races\n",
     "ON races.raceId = results.raceId\n",
     "GROUP BY results.raceId\n",
+    "),\n",
     "fastest_lap_count AS(\n",
     "SELECT\n",
     "driverId, Name, COUNT(driverId) AS Number_of_fastestLap\n",
@@ -6437,7 +6438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -6469,33 +6470,33 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Lewis Hamilton</td>\n",
-       "      <td>344</td>\n",
+       "      <td>12</td>\n",
+       "      <td>Nelson Piquet Jr.</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Lewis Hamilton</td>\n",
-       "      <td>344</td>\n",
+       "      <td>16</td>\n",
+       "      <td>Adrian Sutil</td>\n",
+       "      <td>9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Lewis Hamilton</td>\n",
-       "      <td>344</td>\n",
+       "      <td>15</td>\n",
+       "      <td>Jarno Trulli</td>\n",
+       "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Lewis Hamilton</td>\n",
-       "      <td>344</td>\n",
+       "      <td>67</td>\n",
+       "      <td>Sébastien Buemi</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Lewis Hamilton</td>\n",
-       "      <td>344</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Heikki Kovalainen</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -6504,58 +6505,58 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>26423</th>\n",
-       "      <td>859</td>\n",
-       "      <td>Liam Lawson</td>\n",
-       "      <td>5</td>\n",
+       "      <th>1108</th>\n",
+       "      <td>858</td>\n",
+       "      <td>Logan Sargeant</td>\n",
+       "      <td>8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>26424</th>\n",
-       "      <td>859</td>\n",
-       "      <td>Liam Lawson</td>\n",
-       "      <td>5</td>\n",
+       "      <th>1109</th>\n",
+       "      <td>858</td>\n",
+       "      <td>Logan Sargeant</td>\n",
+       "      <td>8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>26425</th>\n",
-       "      <td>859</td>\n",
-       "      <td>Liam Lawson</td>\n",
-       "      <td>5</td>\n",
+       "      <th>1110</th>\n",
+       "      <td>858</td>\n",
+       "      <td>Logan Sargeant</td>\n",
+       "      <td>8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>26426</th>\n",
-       "      <td>859</td>\n",
-       "      <td>Liam Lawson</td>\n",
-       "      <td>5</td>\n",
+       "      <th>1111</th>\n",
+       "      <td>855</td>\n",
+       "      <td>Guanyu Zhou</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>26427</th>\n",
-       "      <td>860</td>\n",
-       "      <td>Oliver Bearman</td>\n",
-       "      <td>1</td>\n",
+       "      <th>1112</th>\n",
+       "      <td>847</td>\n",
+       "      <td>George Russell</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>26428 rows × 3 columns</p>\n",
+       "<p>1113 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "       driverId            Name  Number_of_fastestLap\n",
-       "0             1  Lewis Hamilton                   344\n",
-       "1             1  Lewis Hamilton                   344\n",
-       "2             1  Lewis Hamilton                   344\n",
-       "3             1  Lewis Hamilton                   344\n",
-       "4             1  Lewis Hamilton                   344\n",
-       "...         ...             ...                   ...\n",
-       "26423       859     Liam Lawson                     5\n",
-       "26424       859     Liam Lawson                     5\n",
-       "26425       859     Liam Lawson                     5\n",
-       "26426       859     Liam Lawson                     5\n",
-       "26427       860  Oliver Bearman                     1\n",
+       "      driverId               Name  Number_of_fastestLap\n",
+       "0           12  Nelson Piquet Jr.                     2\n",
+       "1           16       Adrian Sutil                     9\n",
+       "2           15       Jarno Trulli                     7\n",
+       "3           67    Sébastien Buemi                     4\n",
+       "4            5  Heikki Kovalainen                     4\n",
+       "...        ...                ...                   ...\n",
+       "1108       858     Logan Sargeant                     8\n",
+       "1109       858     Logan Sargeant                     8\n",
+       "1110       858     Logan Sargeant                     8\n",
+       "1111       855        Guanyu Zhou                     6\n",
+       "1112       847     George Russell                     6\n",
        "\n",
-       "[26428 rows x 3 columns]"
+       "[1113 rows x 3 columns]"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
