--- a/Formula 1 EDA.ipynb
+++ b/Formula 1 EDA.ipynb
@@ -4562,7 +4562,7 @@
    "metadata": {},
    "source": [
     "#### **Total Constructor Wins**\n",
-    "***Formula 1 is not just about the driver; it’s about every single person at the factory. Without them, there’s no car<br> - Toto Wolf*** *(Mercedes-AMG Team Principal.)*\n",
+    "*Formula 1 is not just about the driver; it’s about every single person at the factory. Without them, there’s no car<br> - Toto Wolf* *(Mercedes-AMG Team Principal.)*\n",
     "\n",
     "- Formula One has witnessed numerous legendary constructors (teams) throughout its history. Among them, Ferrari stands out as the only team to have participated in every F1 season since 1950.\n",
     "- In Formula One, the most successful constructor of a Grand Prix is determined by the team accumulating the most points from that race. Over the years, several teams have achieved remarkable success, leaving their mark on the sport's history.\n",
@@ -7927,7 +7927,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Driver Championship Standings analysis\n",
+    "#### **Driver Win analysis: Hamilton vs. Schumacher**\n",
     "- Michael Schumacher and Lewis Hamilton are often regarded as the greatest drivers in Formula One history, each sharing the record for the most World Driver Championships (7). Their careers are marked by dominance in different eras, both shaping the sport in unique ways.\n",
     "- Michael Schumacher carrer highlights:\n",
     "    - **Debut:** 1991 with Jordan.\n",
@@ -7938,7 +7938,7 @@
     "    - **Debut:** 2007 with McLaren, narrowly missed the title in his rookie year.\n",
     "    - **McLaren:** Won his first championship in 2008.\n",
     "    - **Mercedes:** Dominated the hybrid era, winning six titles from 2014 to 2020.\n",
-    "- **Objective:** Analyze the Driver Championship Standings of Lewis Hamilton (2007–2024) and Michael Schumacher (1991–2012), comparing their championship wins and performances over time. The data will be visualized using a line plot on two subplots for an easier head-to-head comparison.\n"
+    "- **Objective:** Analyze wins o Lewis Hamilton (2007–2024) and Michael Schumacher (1991–2012), comparing their race wins and performances over time. The data will be visualized using a line plot on two subplots for an easier head-to-head comparison.\n"
    ]
   },
   {
@@ -8250,8 +8250,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Constructor Performance\n",
-    "- analyzing the difference between mercedes and ferrari constructor performance when their lead drivers were Hamilton and Schumacher respectively"
+    "#### **Constructor Performance: Ferrari vs. Mercedes**\n",
+    "- A comparative analysis of Ferrari's and Mercedes' constructor performance during the peak years of their lead drivers, Michael Schumacher (Ferrari) and Lewis Hamilton (Mercedes), highlighting their dominance and contributions to their teams' success."
    ]
   },
   {
