--- a/Formula 1 EDA.ipynb
+++ b/Formula 1 EDA.ipynb
@@ -7942,7 +7942,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Number of Fastest Laps for drivers who have finished the race\n"
+    "#### **Fastest Laps by Drivers Who Completed the Race**\n",
+    "- **Objective:** Analyze and visualize the number of fastest laps achieved by drivers who successfully completed the race (statusId = 1) using a bar plot.\n"
    ]
   },
   {
@@ -9682,7 +9683,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Lewis Hamilton Average Fastest Lap Pace across his carrer"
+    "#### **Lewis Hamilton Average Lap Pace across his carrer**\n",
+    "- **Objective:**  Analyze Lewis Hamilton's performance by calculating his average lap pace over the course of his career and visualizing the trends using a line plot."
    ]
   },
   {
