--- a/Formula 1 EDA.ipynb
+++ b/Formula 1 EDA.ipynb
@@ -131026,6 +131026,13 @@
     "plt.xticks(rotation = 'vertical')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### **Status Analysis**"
+   ]
   }
  ],
  "metadata": {
