--- a/Formula 1 EDA.ipynb
+++ b/Formula 1 EDA.ipynb
@@ -10925,7 +10925,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### **Pit Stop Analysis**"
+    "#### **Pit Stop Analysis For each Constructor from 2021 to 2024**\n",
+    "- **Objective:** Analyzing the pit stop time for each Constrcutor from 2021 to 2024 and visiualizing it on a box plot."
    ]
   },
   {
@@ -130884,6 +130885,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Pit stop times for each Constructor from 2021 to 2024*<br>\n",
+    "<img src= \"graphs%20plotly/pit%20stop%20times%20for%20each%20constructor.png\" alt= \"Pit stop times for each Constructor from 2021 to 2024\" width=600>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### **Pit stop times by Circuit analysis**\n",
+    "- **Objective:** to find the average pit stop time for each circuit(which have been a part of the F1 calender from 2021) and visiualizing it on a bar plot"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 86,
    "metadata": {},
@@ -131018,7 +131035,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### **Status Analysis**"
+    "#### **Status Analysis**\n",
+    "- **Objective:** Analyzing the status percentage difference for each constructor by grouping the status into two labels \"Driver Error\" and \"Component Error\" and visiualizing it on bar plot, differentiated by the labels."
    ]
   },
   {
